--- a/index.html
+++ b/index.html
@@ -257,14 +257,14 @@
         <div id="portfolioCarousel" class="carousel slide" data-ride="carousel">
           <div class="carousel-inner">
             <div class="carousel-item active">
-              <img class="d-block w-100" src="/img/img1.jpeg" alt="Работа 1" />
+              <img class="d-block w-100" src="../img/img1.jpeg" alt="Работа 1" />
               <div class="carousel-caption d-none d-md-block">
                 <h5>Работа 1</h5>
                 <p>Описание работы 1</p>
               </div>
             </div>
             <div class="carousel-item">
-              <img class="d-block w-100" src="/img/img2.jpeg" alt="Работа 2" />
+              <img class="d-block w-100" src="../img/img2.jpeg" alt="Работа 2" />
               <div class="carousel-caption d-none d-md-block">
                 <h5>Работа 2</h5>
                 <p>Описание работы 2</p>
