--- a/index.html
+++ b/index.html
@@ -81,12 +81,8 @@
             Корея (Staron)</label
           >
         </div>
-        <input
-          type="number"
-          class="form-control text-center"
-          id="meterInput"
-          placeholder="Введите цифры"
-        />
+        <input type="tel" pattern="[0-9]*" inputmode="numeric" class="form-control text-center" placeholder="Введите цифры" id="meterInput">
+
         <div id="result" class="mt-3"></div>
         <div id="warning" class="text-muted"></div>
       </div>
