--- a/index.html
+++ b/index.html
@@ -26,15 +26,22 @@
       <!-- Contacts Block -->
       <div class="contacts-block p-3 mb-4">
         <div class="text-center">
-            <a href="https://wa.me/+77711020650" class="btn btn-success mx-2" target="_blank">
-                <i class="fab fa-whatsapp"></i> WhatsApp
-            </a>
-            <a href="tel:+77711020650" class="btn btn-success mx-2" target="_blank">
-                <i class="fa-solid fa-phone-volume"></i> +7 (771) 102–06–50
-            </a>
+          <a
+            href="https://wa.me/+77711020650"
+            class="btn btn-success mx-2"
+            target="_blank"
+          >
+            <i class="fab fa-whatsapp"></i> WhatsApp
+          </a>
+          <a
+            href="tel:+77711020650"
+            class="btn btn-success mx-2"
+            target="_blank"
+          >
+            <i class="fa-solid fa-phone-volume"></i> +7 (771) 102–06–50
+          </a>
         </div>
-    </div>
-    
+      </div>
 
       <!-- Calculator Block -->
       <div class="calculator-block p-3 mb-4">
@@ -81,7 +88,14 @@
             Корея (Staron)</label
           >
         </div>
-        <input type="tel" pattern="[0-9]*" inputmode="numeric" class="form-control text-center" placeholder="Введите цифры" id="meterInput">
+        <input
+          type="tel"
+          pattern="[0-9]*"
+          inputmode="numeric"
+          class="form-control text-center"
+          placeholder="Введите количество погонных метров"
+          id="meterInput"
+        />
 
         <div id="result" class="mt-3"></div>
         <div id="warning" class="text-muted"></div>
@@ -193,14 +207,22 @@
             <div
               class="card-head d-flex justify-content-between align-items-center"
             >
-              <h5 class="card-title">
-                Анау Мынауов</i>
-              </h5>
-              <p><i class="fab fa-instagram"></i>
+              <h6 class="card-title">Анау М.</h6>
+              <p>
+                <a
+                  href="https://www.instagram.com/meta/p/C77HvkYPgj8/"
+                  target="_blank"
+                  class="social"
+                >
+                  <i class="fab fa-instagram"></i>
+                </a>
               </p>
             </div>
             <p class="card-text">
-                There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised words which don't look even slightly believable.
+              There are many variations of passages of Lorem Ipsum available,
+              but the majority have suffered alteration in some form, by
+              injected humour, or randomised words which don't look even
+              slightly believable.
             </p>
           </div>
         </div>
@@ -209,14 +231,21 @@
             <div
               class="card-head d-flex justify-content-between align-items-center"
             >
-              <h5 class="card-title">
-                Алина Ким</i>
-              </h5>
-              <p><i class="fab fa-tiktok"></i>
+              <h6 class="card-title">Алина К.</h6>
+              <p>
+                <a
+                  href="https://www.instagram.com/meta/p/C77HvkYPgj8/"
+                  target="_blank"
+                  class="social"
+                  ><i class="fab fa-tiktok"></i
+                ></a>
               </p>
             </div>
             <p class="card-text">
-                There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised words which don't look even slightly believable.
+              There are many variations of passages of Lorem Ipsum available,
+              but the majority have suffered alteration in some form, by
+              injected humour, or randomised words which don't look even
+              slightly believable.
             </p>
           </div>
         </div>
@@ -225,13 +254,22 @@
             <div
               class="card-head d-flex justify-content-between align-items-center"
             >
-              <h5 class="card-title">
-                Дәке Шмәке</i>
-              </h5>
-              <p><i class="fab fa-facebook"></i>
+              <h6 class="card-title">Бәке У.</h6>
+              <p>
+                <a
+                  href="https://www.instagram.com/meta/p/C77HvkYPgj8/"
+                  target="_blank"
+                  class="social"
+                  ><i class="fab fa-facebook"></i
+                ></a>
               </p>
             </div>
-            <p class="card-text">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised words which don't look even slightly believable.</p>
+            <p class="card-text">
+              There are many variations of passages of Lorem Ipsum available,
+              but the majority have suffered alteration in some form, by
+              injected humour, or randomised words which don't look even
+              slightly believable.
+            </p>
           </div>
         </div>
       </div>
