change name order

--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
               data-price="55000"
               checked
             />
-            Китай (Neomarm)</label
+            Neomarm (Китай)</label
           >
           <label class="d-block"
             ><input
@@ -67,7 +67,7 @@
               value="K-stone"
               data-price="60000"
             />
-            Китай (K-stone)</label
+            K-stone (Китай)</label
           >
           <label class="d-block"
             ><input
@@ -76,7 +76,7 @@
               value="Grandex"
               data-price="70000"
             />
-            Корея (Grandex)</label
+            Grandex (Корея)</label
           >
           <label class="d-block"
             ><input
@@ -85,7 +85,7 @@
               value="Staron"
               data-price="80000"
             />
-            Корея (Staron)</label
+            Staron (Корея)</label
           >
         </div>
         <input
