--- a/index.html
+++ b/index.html
@@ -101,70 +101,73 @@
         <div id="warning" class="text-muted"></div>
       </div>
 
-      <div class="form-block p-3 mb-4">
-        <h3 class="text-center">Вызвать замерщика</h3>
-        <form id="measurementForm">
-          <div class="form-group">
-            <input
-              type="text"
-              class="form-control"
-              id="name"
-              name="name"
-              placeholder="Ваше имя"
-              required
-            />
-          </div>
-          <div class="form-group">
-            <input
-              type="tel"
-              class="form-control"
-              id="phone"
-              name="phone"
-              placeholder="Номер телефона"
-              required
-            />
-          </div>
-          <div class="text-center">
-            <button type="submit" class="btn btn-primary">
-              Отправить заявку
-            </button>
-          </div>
-        </form>
-        <div id="statusMessage" class="text-center mt-3"></div>
+      <!-- Вызвать замерщика -->
+
+      <div class="call-block p-3 mb-4">
+        <h3 class="text-center mb-4">
+          Не знаете сколько погонных метров вам нужно?
+        </h3>
+
+        <div class="text-center mb-4">
+          <p class="text-center">Можете бесплатно вызвать замерщика!</p>
+          <button id="openModalBtn" class="btn btn-primary">
+            Вызвать замерщика
+          </button>
+        </div>
       </div>
+
+      <!-- Modal -->
+      <div id="contactsModal" class="modal">
+        <div class="modal-content">
+          <span class="close">&times;</span>
+          <h5 class="modal-title text-center">Контакты замерщика</h5>
+          <div class="contacts-block p-3 mb-4">
+            <div class="text-center">
+              <a
+                href="https://wa.me/77711020650/?text=Привет,%20я%20хочу%20вызвать%20замерщика"
+                class="btn btn-success mx-2"
+                target="_blank"
+              >
+                <i class="fab fa-whatsapp"></i> WhatsApp
+              </a>
+              <a
+                href="tel:+77711020650"
+                class="btn btn-success mx-2"
+                target="_blank"
+              >
+                <i class="fa-solid fa-phone-volume"></i> +7 (771) 102–06–50
+              </a>
+            </div>
+          </div>
+        </div>
+      </div>
+
       <script>
-        document
-          .getElementById("measurementForm")
-          .addEventListener("submit", function (event) {
-            event.preventDefault();
+        // Get the modal
+        var modal = document.getElementById("contactsModal");
 
-            var name = document.getElementById("name").value;
-            var phone = document.getElementById("phone").value;
+        // Get the button that opens the modal
+        var btn = document.getElementById("openModalBtn");
 
-            var templateParams = {
-              name: name,
-              phone: phone,
-            };
+        // Get the <span> element that closes the modal
+        var span = document.getElementsByClassName("close")[0];
 
-            emailjs
-              .send("service_bm28kcg", "template_fyxwfaa", templateParams)
-              .then(
-                function (response) {
-                  document.getElementById("statusMessage").innerText =
-                    "Заявка успешно отправлена. Ждите звонка.";
-                  document
-                    .getElementById("statusMessage")
-                    .classList.add("text-success");
-                },
-                function (error) {
-                  document.getElementById("statusMessage").innerText =
-                    "Ошибка при отправке заявки. Можете нас набрать?";
-                  document
-                    .getElementById("statusMessage")
-                    .classList.add("text-danger");
-                }
-              );
-          });
+        // When the user clicks the button, open the modal
+        btn.onclick = function () {
+          modal.style.display = "block";
+        };
+
+        // When the user clicks on <span> (x), close the modal
+        span.onclick = function () {
+          modal.style.display = "none";
+        };
+
+        // When the user clicks anywhere outside of the modal, close it
+        window.onclick = function (event) {
+          if (event.target == modal) {
+            modal.style.display = "none";
+          }
+        };
       </script>
 
       <!-- FAQ Block -->
