--- a/index.html
+++ b/index.html
@@ -475,14 +475,18 @@
       </div>
 
       <!-- About Us Block -->
-      <div class="about-block p-3 mb-4">
+      <div class="testimonials-block p-3 mb-4">
         <h3 class="text-center">О нас</h3>
-        <p>
-          Наша компания Qulan Tas занимается производством изделий из
-          искусственного камня с 2010 года. Мы ценим качество и удовлетворение
-          наших клиентов, поэтому используем только лучшие материалы и
-          современные технологии.
-        </p>
+        <div class="card">
+          <div class="card-body">
+            <p>
+              Наша компания Qulan Tas занимается производством изделий из
+              искусственного камня с 2010 года. Мы ценим качество и
+              удовлетворение наших клиентов, поэтому используем только лучшие
+              материалы и современные технологии.
+            </p>
+          </div>
+        </div>
       </div>
 
       <!-- Portfolio Block -->
