add class to videos

--- a/index.html
+++ b/index.html
@@ -215,6 +215,7 @@
                 height="200"
                 src="https://www.youtube.com/embed/NAMvdbS4lk4"
                 frameborder="0"
+                class="card-img-top"
               ></iframe>
 
               <div class="card-body">
@@ -240,6 +241,7 @@
                 height="200"
                 src="https://www.youtube.com/embed/NAMvdbS4lk4"
                 frameborder="0"
+                class="card-img-top"
               ></iframe>
               <div class="card-body">
                 <h5 class="card-title">Шаг ‍2</h5>
@@ -264,6 +266,7 @@
                 height="200"
                 src="https://www.youtube.com/embed/NAMvdbS4lk4"
                 frameborder="0"
+                class="card-img-top"
               ></iframe>
               <div class="card-body">
                 <h5 class="card-title">Шаг ‍3</h5>
@@ -289,6 +292,7 @@
                 height="200"
                 src="https://www.youtube.com/embed/NAMvdbS4lk4"
                 frameborder="0"
+                class="card-img-top"
               ></iframe>
               <div class="card-body">
                 <h5 class="card-title">Шаг ‍4</h5>
